# SpiralTorch

./: .gitattributes  .gitignore  .pr-marker  .rustfmt.toml  .torchmeta.json  ASCII_BANNER.txt  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPRECATION_NOTES.md  ECOSYSTEM_ENHANCEMENTS.md  GOVERNANCE.md  HOWTO_INTEGRATE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MAINTAINERS.md  MANIFEST.in  NOTICE  PATCH_NOTES_v1_6_0.md  README-FRACTIONAL-v1_23_0.md  README-OVERLAY-v1_22_0.md  README-RCCL.md  README.md  REFINEMENT_SUMMARY.md  SECURITY.md  bench_st_vs_torch.py  build.rs  deny.toml  justfile  maturin  pyproject.toml  rustfmt.toml
bindings/cobol_bridge/: Cargo.toml
bindings/cobol_bridge/src/: lib.rs
bindings/spiraltorch-sys/: Cargo.toml
bindings/spiraltorch-sys/src/: lib.rs
bindings/st-py/: CHANGELOG.md  Cargo.toml  README.md  __init__.py  build.rs  pyproject.toml  spiraltorch.pyi
bindings/st-py/examples/: amegagrad_session_quickstart.py  anthropic_api_llm_wasm_geometry_injection.py  anthropic_api_llm_zspace_runtime.py  anthropic_wasm_geometry_injection_repeat_sample.json  api_llm_live_provider_matrix.py  api_llm_live_provider_matrix_sweep.py  api_llm_prompt_suite.py  api_llm_provider_suite_compare.py  api_llm_report_compare.py  api_llm_topos_stagent_route_policy.py  api_llm_topos_sweep.py  api_llm_trace_compare.py  api_llm_wasm_context_runtime.py  api_llm_zspace_runtime.py  atlas_quickstart.py  byte_lm_finetune.py  byte_lm_handoff_strategy_compare.py  byte_lm_lora_adapter.py  byte_lm_mlp_lora_adapter.py  byte_lm_mlp_lora_capacity_lanes.jsonl  byte_lm_mlp_lora_profile_runner.py  byte_lm_mlp_lora_source_compare.py  byte_lm_mlp_lora_sweep.py  byte_lm_profile_smoke.py  byte_lm_replay_sweep.py  byte_lm_transformers_trace.py  byte_lm_zspace_compare.py  canvas_atlas_session_quickstart.py  canvas_projector_quickstart.py  checkpoint_preflight.py  hello_session.py  hf_adapter_scale_up_continuation_sample.json  hf_checkpoint_generation_control.py  hf_finetune_bridge.py  hf_finetune_generation_curve.py  hf_finetune_milestone_capture.py  hf_finetune_milestone_runtime.py  hf_finetune_model_configs.example.json  hf_finetune_monitor_snapshot.py  hf_finetune_run_artifacts.py  (+54 more)
bindings/st-py/spiral/: __init__.py  cli.py  export.py
bindings/st-py/spiraltorch/: __init__.py  __init__.pyi  _meta.py  _process.py  _zspace_aliases.py  amegagrad_trace.py  api_llm_runtime.py  concept_diffusion.py  ecosystem.py  elliptic.py  fractal_field_probe.py  free_energy.py  generation_control.py  geometry_context.py  gnn_trace.py  hf_adapter.py  hf_adapter_executor.py  hf_adapter_executor_launch.py  hf_adapter_executor_recovery.py  hf_adapter_executor_runtime.py  hf_adapter_executor_status.py  hf_adapter_executor_supervisor.py  hf_adapter_executor_supervisor_launch.py  hf_artifact_probe_worker.py  hf_cli.py  hf_cli_payloads.json  hf_dataset_identity.py  hf_execution_identity.py  hf_finetune_entrypoint.py  hf_ft.py  hf_ft_status.py  hf_generation.py  hf_input_identity.py  hf_peft.py  hf_replay_identity.py  hf_runtime_identity.py  hf_training_identity.py  imaginary_time_schrodinger.py  log_z_series_probe.py  model_zoo.py  (+15 more)
bindings/st-py/src/: Cargo.toml  autograd.rs  build.rs  compat.rs  dataset.rs  elliptic.rs  export.rs  frac.rs  hpo.rs  inference.rs  introspect.rs  json.rs  julia_bridge.rs  kv.rs  lib.rs  nn.rs  ops.rs  planner.rs  plugin.rs  psi_synchro.rs  pure.rs  qr.rs  rec.rs  rl.rs  robotics.rs  runtime.rs  safety.rs  scale_stack.rs  selfsup.rs  softlogic_native.rs  sot.rs  spiral_rl.rs  spiralk.rs  telemetry.rs  tensor.rs  text.rs  theory.rs  trainer.rs  vision.rs  wgpu.rs  (+3 more)
bindings/st-py/tests/: __init__.py  _native_loader.py  conftest.py  test_amegagrad_optimizer.py  test_anthropic_api_llm_wasm_geometry_injection_example.py  test_api_llm_live_matrix_wasm_context.py  test_api_llm_runtime.py  test_api_llm_topos_sweep_example.py  test_api_llm_wasm_context_example.py  test_autograd_tensor.py  test_cli_search.py  test_concept_diffusion.py  test_ecosystem.py  test_elliptic_stub_runtime.py  test_fractal_field_probe.py  test_free_energy.py  test_generation_control.py  test_geometry_context.py  test_gnn_trace_utils.py  test_gpu_probe_native.py  test_hf_adapter.py  test_hf_adapter_executor.py  test_hf_adapter_executor_launch.py  test_hf_adapter_executor_recovery.py  test_hf_adapter_executor_runtime.py  test_hf_adapter_executor_status.py  test_hf_adapter_executor_supervisor.py  test_hf_adapter_executor_supervisor_launch.py  test_hf_cli_payloads.py  test_hf_dataset_identity.py  test_hf_execution_identity.py  test_hf_ft_bridge.py  test_hf_generation.py  test_hf_input_identity.py  test_hf_peft.py  test_hf_replay_identity.py  test_hf_runtime_identity.py  test_hf_training_identity.py  test_hypergrad_and_zspace_helpers.py  test_imaginary_time_schrodinger.py  (+42 more)
bindings/st-wasm/: Cargo.toml  README.md  build.rs
bindings/st-wasm/examples/: README.md  vite.common.ts
bindings/st-wasm/src/: api_llm_policy.rs  autograd.rs  canvas.rs  cobol.rs  cobol_bridge.rs  concept_diffusion.rs  cosmology.rs  fft.rs  fractal_field.rs  free_energy.rs  generation_control.rs  imaginary_time_schrodinger.rs  lib.rs  mellin.rs  rank_plan.rs  reports.rs  (+18 more)
crates/julia-ffi-poc/: Cargo.toml
crates/spiral-config/: Cargo.toml
crates/spiral-hpo/: Cargo.toml
crates/spiral-opt/: Cargo.toml
crates/spiral-safety/: Cargo.toml
crates/spiral-selfsup/: Cargo.toml
crates/st-amg/: Cargo.toml
crates/st-backend-hip/: Cargo.toml  build.rs  build_support.rs
crates/st-backend-wgpu/: Cargo.toml
crates/st-bench/: Cargo.toml
crates/st-core/: Cargo.add.toml  Cargo.toml  Cargo.toml.bak.1760384291  build.rs
crates/st-frac/: Cargo.toml
crates/st-kdsl/: Cargo.toml  rustfmt.toml
crates/st-kv/: Cargo.toml
crates/st-logic/: Cargo.toml
crates/st-metrics/: Cargo.toml
crates/st-nn/: Cargo.toml
crates/st-qr-studio/: Cargo.toml
crates/st-rec/: Cargo.toml
crates/st-refract/: Cargo.toml
crates/st-rl/: Cargo.toml
crates/st-robotics/: Cargo.toml
crates/st-softlogic/: Cargo.toml
(+1129 files in other folders)
