[workspace]
members = [
  "crates/st-core",
  "crates/st-backend-hip",
  "crates/st-backend-wgpu",
  "crates/st-kdsl",
  "crates/st-logic",
  "crates/st-kv",
  "crates/st-tensor",
  "crates/st-nn",
  "crates/st-qr-studio",
  "crates/st-text",
  "crates/st-vision",
  "crates/st-rl",
  "crates/st-rec",
  "crates/st-bench",
  "crates/st-amg",
  "crates/spiral-safety",
  "bindings/st-py",
  "bindings/st-wasm",
  "tools/xai-cli"
]
default-members = [
  "crates/st-core",
  "crates/st-backend-hip",
  "crates/st-kdsl",
  "crates/st-logic",
  "crates/st-kv",
  "crates/st-tensor",
  "crates/st-nn",
  "crates/st-qr-studio",
  "crates/st-text",
  "crates/st-vision",
  "crates/st-rl",
  "crates/st-rec",
  "crates/st-bench",
  "crates/st-amg",
  "bindings/st-wasm"
]
resolver = "2"
