[workspace]
members = [
  "crates/st-core",
  "crates/st-backend-hip",
  "crates/st-backend-wgpu",
  "crates/st-kdsl",
  "crates/st-logic",
  "crates/st-kv",
  "crates/st-tensor",
  "crates/st-softlogic",
  "crates/st-nn",
  "crates/st-qr-studio",
  "crates/st-text",
  "crates/st-vision",
  "crates/st-spiral-rl",
  "crates/st-rec",
  "crates/st-bench",
  "crates/st-amg",
  "crates/st-metrics",
  "crates/spiral-selfsup",
  "crates/spiral-opt",
  "crates/spiral-hpo",
  "crates/spiral-safety",
  "crates/spiral-config",
  "bindings/spiraltorch-sys",
  "bindings/st-py",
  "bindings/st-wasm",
  "tools/xai-cli",
  "tools/visualize-z-volume"
,  "crates/julia-ffi-poc"
]
default-members = [
  "crates/st-core",
  "crates/st-backend-hip",
  "crates/st-kdsl",
  "crates/st-logic",
  "crates/st-kv",
  "crates/st-tensor",
  "crates/st-softlogic",
  "crates/st-nn",
  "crates/st-qr-studio",
  "crates/st-text",
  "crates/st-vision",
  "crates/st-spiral-rl",
  "crates/st-rec",
  "crates/st-bench",
  "crates/st-amg",
  "crates/spiral-opt",
  "bindings/st-wasm"
]
resolver = "2"
