[workspace]
members = [
  "crates/st-core",
  "crates/st-backend-hip",
  "crates/st-backend-wgpu",
  "crates/st-kdsl",
  "crates/st-logic",
  "crates/st-kv",
  "crates/st-frac",
  "crates/st-tensor",
  "crates/st-softlogic",
  "crates/st-refract",
  "crates/st-sync",
  "crates/st-zeta",
  "crates/st-nn",
  "crates/st-qr-studio",
  "crates/st-text",
  "crates/st-vision",
  "crates/st-robotics",
  "crates/st-spiral-rl",
  "crates/st-rec",
  "crates/st-bench",
  "crates/st-amg",
  "crates/st-metrics",
  "crates/spiral-selfsup",
  "crates/spiral-opt",
  "crates/spiral-hpo",
  "crates/spiral-safety",
  "crates/spiral-config",
  "bindings/cobol_bridge",
  "crates/julia-ffi-poc",
  "bindings/spiraltorch-sys",
  "bindings/st-py",
  "bindings/st-wasm",
  "tools/xai-cli",
  "tools/visualize-z-volume",
]
default-members = [
  "crates/st-core",
  "crates/st-backend-hip",
  "crates/st-kdsl",
  "crates/st-logic",
  "crates/st-kv",
  "crates/st-tensor",
  "crates/st-softlogic",
  "crates/st-refract",
  "crates/st-sync",
  "crates/st-zeta",
  "crates/st-nn",
  "crates/st-qr-studio",
  "crates/st-text",
  "crates/st-vision",
  "crates/st-spiral-rl",
  "crates/st-rec",
  "crates/st-bench",
  "crates/st-amg",
  "crates/st-robotics",
  "crates/spiral-opt",
  "bindings/st-wasm"
]
resolver = "2"
