[build-system]
requires = ["maturin>=1.6,<2"]
build-backend = "maturin"

[project]
name = "spiraltorch"
version = "1.3.98"
description = "SpiralTorch: Rust-first, Torch-like ops with optional GPU backends (WGPU/MPS/CUDA)"
authors = [{name="Ryo SpiralArchitect"}]
license = {text="AGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

[project.urls]
Homepage = "https://github.com/RyoSpiralArchitect/spiraltorch"
Repository = "https://github.com/RyoSpiralArchitect/spiraltorch"

[tool.maturin]
bindings = "pyo3"
python-source = "bindings/st-py/python"
module-name = "spiraltorch.spiraltorch"
features = []
