[build-system]
requires = ["maturin>=1.6,<2"]
build-backend = "maturin"

[project]
name = "spiraltorch"
version = "1.5.3"
description = "SpiralTorch: WGPU-first, Rust-core, Torch-like tensors with SpiralK heuristics & distributed Unison."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "SpiralTorch authors" }]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/RyoSpiralArchitect/spiraltorch"
Repository = "https://github.com/RyoSpiralArchitect/spiraltorch"

[tool.maturin]
features = ["wgpu", "logic", "kdsl"]
python-source = "bindings/st-py"
module-name = "spiraltorch._spiraltorch"
bindings = "pyo3"
strip = true
