[package]
name = "spiraltorch-sys"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false
description = "C-ABI shims that expose a stable surface for foreign-language bindings"
authors = ["SpiralTorch Contributors"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.19"
st-tensor = { path = "../../crates/st-tensor" }
st-core = { path = "../../crates/st-core", features = ["golden"] }

[dev-dependencies]
libc = "0.2"
