[package]
name = "spiraltorch-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for SpiralTorch heuristics"
license = "AGPL-3.0-or-later"
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]

[lib]
name = "spiraltorch"
crate-type = ["cdylib"]

[features]
default = ["extension-module", "psi", "psychoid", "collapse"]
extension-module = ["pyo3/extension-module"]
psi = []
psychoid = ["psi"]
collapse = ["psi"]

# Backend selection (mirrors the CLI surface expected by maturin builds)
cpu = []
wgpu = ["st-core/wgpu", "st-tensor/wgpu"]
"wgpu-rt" = ["st-core/wgpu-rt", "wgpu"]
mps = ["st-core/mps", "st-tensor/mps"]
cuda = ["st-core/cuda", "st-tensor/cuda"]
hip = ["st-core/hip", "st-tensor/hip"]
"hip-real" = ["hip", "st-core/hip-real"]
logic = ["st-core/logic"]
"logic-learn" = ["st-core/logic-learn"]
kdsl = ["st-core/kdsl"]
"kv-redis" = ["st-core/kv-redis"]
"wgpu-frac" = ["st-tensor/wgpu_frac"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3", "abi3-py38", "gil-refs", "num-complex"] }
st-core = { path = "../../crates/st-core", default-features = false, features = ["psi", "psychoid", "collapse"] }
st-tensor = { path = "../../crates/st-tensor", default-features = false }
st-nn = { path = "../../crates/st-nn", features = ["psychoid", "collapse"] }
st-rl = { path = "../../crates/st-rl" }
st-rec = { path = "../../crates/st-rec" }
st-backend-hip = { path = "../../crates/st-backend-hip", default-features = false }
st-frac = { path = "../../crates/st-frac" }
ndarray = { version = "0.15", default-features = false, features = ["std"] }
num-complex = { version = "0.4" }

[package.metadata.maturin]
name = "spiraltorch"

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"
