[package]
name = "spiraltorch-py"
version = "0.1.2"
edition = "2021"
description = "Python bindings for SpiralTorch heuristics"
license = "AGPL-3.0-or-later"
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]

[lib]
name = "spiraltorch"
crate-type = ["cdylib"]

[features]
default = [
    "extension-module",
    "psi",
    "psychoid",
    "collapse",
    "nn",
    "spiral_rl",
    "rec",
    "text",
    "selfsup",
]
extension-module = ["pyo3/extension-module"]
psi = []
psychoid = ["psi"]
collapse = ["psi"]
nn = ["dep:st-nn"]
spiral_rl = ["dep:st-spiral-rl"]
rec = ["dep:st-rec", "dep:st-kdsl"]
text = ["dep:st-text"]
selfsup = ["dep:spiral-selfsup"]

# Backend selection (mirrors the CLI surface expected by maturin builds)
cpu = []
wgpu = ["st-core/wgpu", "st-tensor/wgpu_frac"]
"wgp" = ["wgpu"]
"wgpu-rt" = ["st-core/wgpu-rt", "wgpu"]
mps = ["st-core/mps", "st-tensor/mps"]
cuda = ["st-core/cuda", "st-tensor/cuda"]
hip = ["st-core/hip", "st-tensor/hip"]
"hip-real" = ["hip", "st-core/hip-real"]
logic = ["st-core/logic"]
"logic-learn" = ["st-core/logic-learn"]
kdsl = ["st-core/kdsl", "st-nn/kdsl", "st-spiral-rl/kdsl"]
"kv-redis" = ["st-core/kv-redis"]
"wgpu-frac" = ["wgpu"]

[build-dependencies]
pyo3-build-config = "0.22"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3", "abi3-py38", "gil-refs", "num-complex"] }
st-core = { path = "../../crates/st-core", default-features = false, features = ["psi", "psychoid", "collapse"] }
st-tensor = { path = "../../crates/st-tensor", default-features = false }
st-nn = { path = "../../crates/st-nn", optional = true, features = ["psychoid", "collapse"] }
st-spiral-rl = { path = "../../crates/st-spiral-rl", optional = true }
st-rec = { path = "../../crates/st-rec", optional = true }
st-text = { path = "../../crates/st-text", optional = true }
st-kdsl = { path = "../../crates/st-kdsl", optional = true }
st-backend-hip = { path = "../../crates/st-backend-hip", default-features = false }
st-frac = { path = "../../crates/st-frac" }
spiral-selfsup = { path = "../../crates/spiral-selfsup", optional = true }
spiral-opt = { path = "../../crates/spiral-opt" }
spiral-hpo = { path = "../../crates/spiral-hpo" }
ndarray = { version = "0.15", default-features = false, features = ["std"] }
num-complex = { version = "0.4" }
spiral-safety = { path = "../../crates/spiral-safety" }
serde_json = "1"

[package.metadata.maturin]
name = "spiraltorch"
python-source = "python"

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"
