[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "spiraltorch"
version = "0.1.4"
description = "Rust-first learning primitives for SpiralTorch"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later"}
authors = [{ name = "Ryo ∴ SpiralArchitect" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent"
]

[tool.maturin]
# Allow invoking maturin from either the repository root (using `-m bindings/st-py/Cargo.toml`)
# or the crate directory directly.  Older maturin releases resolve `python-source`
# relative to the current working directory, which meant the default value of
# "python" only worked when the command was executed from `bindings/st-py`.
# By pointing `python-source` at the crate root and explicitly listing the
# packages that should be included we keep the packaging layout stable while
# avoiding the missing-path error the user reported.
python-source = "."
python-packages = ["spiral", "spiraltorch"]

[project.scripts]
spiral-train = "spiral.cli:main"

[project.urls]
Homepage = "https://github.com/RyoSpiralArchitect/SpiralTorch"
Source = "https://github.com/RyoSpiralArchitect/SpiralTorch"
