[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "spiraltorch"
version = "0.4.13"
description = "Rust-first learning primitives for SpiralTorch"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later"}
license-files = ["LICENSE.txt"]
authors = [{ name = "Ryo ∴ SpiralArchitect" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent"
]

[tool.maturin]
# Allow invoking maturin from either the repository root (using `-m bindings/st-py/Cargo.toml`)
# or the crate directory directly.  Older maturin releases resolve `python-source`
# relative to the current working directory, which meant the default value of
# "python" only worked when the command was executed from `bindings/st-py`.
# By pointing `python-source` at the crate root and explicitly listing the
# packages that should be included we keep the packaging layout stable while
# avoiding the missing-path error the user reported.
features = ["pyo3/extension-module", "pyo3/abi3-py38"]
python-source = "."
python-packages = ["spiral", "spiraltorch"]

[project.scripts]
spiral-train = "spiral.cli:main"
spiral-model-zoo = "spiraltorch.model_zoo:main"
spiral-export = "spiral.export:main"
spiral-plugin = "spiraltorch.plugin_cli:main"
spiral-runtime-preflight = "spiraltorch.runtime_imports:main"

[project.optional-dependencies]
hf-runtime = [
  "transformers>=4.40",
  "torch>=2.2",
  "tokenizers>=0.15",
  "safetensors>=0.4",
]
hf-finetune = [
  "transformers>=4.40",
  "torch>=2.2",
  "tokenizers>=0.15",
  "datasets>=2.18",
  "accelerate>=0.27",
  "safetensors>=0.4",
  "pyarrow>=15",
  "tqdm>=4.66",
]
hf-peft = [
  "transformers>=4.40",
  "torch>=2.2",
  "tokenizers>=0.15",
  "accelerate>=0.27",
  "peft>=0.10",
  "safetensors>=0.4",
]
hf-gpt2-ft = [
  "transformers>=4.40",
  "torch>=2.2",
  "tokenizers>=0.15",
  "datasets>=2.18",
  "accelerate>=0.27",
  "safetensors>=0.4",
  "pyarrow>=15",
  "tqdm>=4.66",
  "evaluate>=0.4",
  "peft>=0.10",
]
hf-trl-sft = [
  "transformers>=4.40",
  "torch>=2.2",
  "tokenizers>=0.15",
  "datasets>=2.18",
  "accelerate>=0.27",
  "safetensors>=0.4",
  "pyarrow>=15",
  "tqdm>=4.66",
  "peft>=0.10",
  "trl>=0.12",
  "trackio>=0.2",
]

[project.urls]
Homepage = "https://github.com/RyoSpiralArchitect/SpiralTorch"
Source = "https://github.com/RyoSpiralArchitect/SpiralTorch"
