[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "spiraltorch"
version = "0.4.13"
description = "Rust-first learning primitives for SpiralTorch"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later"}
license-files = ["LICENSE.txt"]
authors = [{ name = "Ryo ∴ SpiralArchitect" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent"
]

[tool.maturin]
# Allow invoking maturin from either the repository root (using `-m bindings/st-py/Cargo.toml`)
# or the crate directory directly.  Older maturin releases resolve `python-source`
# relative to the current working directory, which meant the default value of
# "python" only worked when the command was executed from `bindings/st-py`.
# By pointing `python-source` at the crate root and explicitly listing the
# packages that should be included we keep the packaging layout stable while
# avoiding the missing-path error the user reported.
features = ["pyo3/extension-module", "pyo3/abi3-py38"]
python-source = "."
python-packages = ["spiral", "spiraltorch"]

[project.scripts]
spiral-train = "spiral.cli:main"
spiral-model-zoo = "spiraltorch.model_zoo:main"
spiral-export = "spiral.export:main"
spiral-plugin = "spiraltorch.plugin_cli:main"
spiral-runtime-preflight = "spiraltorch.runtime_imports:main"
spiral-hf-profile = "spiraltorch.hf_cli:profile_main"
spiral-hf-adapter-export = "spiraltorch.hf_cli:adapter_export_main"
spiral-hf-adapter-lineage = "spiraltorch.hf_cli:adapter_lineage_main"
spiral-hf-adapter-promote = "spiraltorch.hf_cli:adapter_promotion_main"
spiral-hf-adapter-chain = "spiraltorch.hf_cli:adapter_promotion_chain_main"
spiral-hf-adapter-executor = "spiraltorch.hf_cli:adapter_continuation_executor_main"
spiral-hf-adapter-executor-launch-status = "spiraltorch.hf_cli:adapter_continuation_executor_launch_status_main"
spiral-hf-adapter-executor-quarantine = "spiraltorch.hf_cli:adapter_continuation_executor_quarantine_main"
spiral-hf-adapter-executor-status = "spiraltorch.hf_cli:adapter_continuation_executor_status_main"
spiral-hf-adapter-executor-stop = "spiraltorch.hf_cli:adapter_continuation_executor_stop_main"
spiral-hf-finetune = "spiraltorch.hf_cli:finetune_bridge_main"
spiral-hf-finetune-sweep = "spiraltorch.hf_cli:finetune_sweep_main"
spiral-hf-scale-up = "spiraltorch.hf_cli:finetune_scale_up_main"
spiral-hf-trace-summary = "spiraltorch.hf_cli:finetune_trace_summary_main"
spiral-hf-run-status = "spiraltorch.hf_cli:finetune_run_status_main"
spiral-hf-monitor-snapshot = "spiraltorch.hf_cli:finetune_monitor_snapshot_main"
spiral-hf-status-history = "spiraltorch.hf_cli:finetune_status_history_main"
spiral-hf-wait-launch = "spiraltorch.hf_cli:finetune_wait_launch_main"
spiral-hf-wait-launch-summary = "spiraltorch.hf_cli:finetune_wait_launch_summary_main"
spiral-hf-milestone-capture = "spiraltorch.hf_cli:finetune_milestone_capture_main"
spiral-hf-milestone-runtime = "spiraltorch.hf_cli:finetune_milestone_runtime_main"
spiral-hf-checkpoint-generation-control = "spiraltorch.hf_cli:checkpoint_generation_control_main"
spiral-hf-zspace-generation-control-sweep = "spiraltorch.hf_cli:zspace_generation_control_sweep_main"
spiral-hf-zspace-generation-control-compare = "spiraltorch.hf_cli:zspace_generation_control_compare_main"
spiral-zspace-inference-distortion-probe = "spiraltorch.hf_cli:zspace_inference_distortion_probe_main"
spiral-zspace-inference-distortion-sweep = "spiraltorch.hf_cli:zspace_inference_distortion_sweep_main"
spiral-hf-generation-curve = "spiraltorch.hf_cli:finetune_generation_curve_main"
spiral-hf-run-artifacts = "spiraltorch.hf_cli:finetune_run_artifacts_main"
spiral-hf-run-ops = "spiraltorch.hf_cli:finetune_run_ops_main"

[project.optional-dependencies]
hf-runtime = [
  "transformers>=4.40",
  "torch>=2.2",
  "tokenizers>=0.15",
  "safetensors>=0.4",
]
hf-finetune = [
  "transformers>=4.40",
  "torch>=2.2",
  "tokenizers>=0.15",
  "datasets>=2.18",
  "accelerate>=0.27",
  "safetensors>=0.4",
  "pyarrow>=15",
  "tqdm>=4.66",
]
hf-peft = [
  "transformers>=4.40",
  "torch>=2.2",
  "tokenizers>=0.15",
  "accelerate>=0.27",
  "peft>=0.10",
  "safetensors>=0.4",
]
hf-peft-finetune = [
  "transformers>=4.40",
  "torch>=2.2",
  "tokenizers>=0.15",
  "datasets>=2.18",
  "accelerate>=0.27",
  "safetensors>=0.4",
  "pyarrow>=15",
  "tqdm>=4.66",
  "peft>=0.10",
]
hf-gpt2-ft = [
  "transformers>=4.40",
  "torch>=2.2",
  "tokenizers>=0.15",
  "datasets>=2.18",
  "accelerate>=0.27",
  "safetensors>=0.4",
  "pyarrow>=15",
  "tqdm>=4.66",
  "evaluate>=0.4",
  "peft>=0.10",
]
hf-full-finetune = [
  "transformers>=4.40",
  "torch>=2.2",
  "tokenizers>=0.15",
  "datasets>=2.18",
  "accelerate>=0.27",
  "safetensors>=0.4",
  "pyarrow>=15",
  "tqdm>=4.66",
  "evaluate>=0.4",
  "peft>=0.10",
]
hf-trl-sft = [
  "transformers>=4.40",
  "torch>=2.2",
  "tokenizers>=0.15",
  "datasets>=2.18",
  "accelerate>=0.27",
  "safetensors>=0.4",
  "pyarrow>=15",
  "tqdm>=4.66",
  "peft>=0.10",
  "trl>=0.12",
  "trackio>=0.2",
]

[project.urls]
Homepage = "https://github.com/RyoSpiralArchitect/SpiralTorch"
Source = "https://github.com/RyoSpiralArchitect/SpiralTorch"
