[package]
name = "spiraltorch-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]
license = "AGPL-3.0-or-later"
description = "WebAssembly bindings for SpiralTorch fractal canvases and heuristics"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "spiraltorch_wasm"
path = "src/lib.rs"

[dependencies]
st-tensor = { path = "../../crates/st-tensor" }
st-core   = { path = "../../crates/st-core" }
st-frac   = { path = "../../crates/st-frac" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.5"
