[package]
name = "julia-ffi-poc"
version = "0.1.0"
edition = "2021"

[features]
default = []
with-julia = ["jlrs"]

[dependencies]
anyhow = "1.0"
jlrs = { version = "0.19", optional = true, features = ["sync-rt"] }
criterion = { version = "0.5", optional = true }

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "tempo_score"
harness = false
