[package]
name = "spiral-hpo"
version = "0.1.0"
edition = "2021"
description = "Deterministic hyper-parameter search strategies for SpiralTorch"
license = "AGPL-3.0-or-later"
authors = ["SpiralTorch Contributors"]

[dependencies]
rand = { version = "0.8", features = ["std"] }
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
smallvec = "1"

[dev-dependencies]
once_cell = "1"

[features]
default = []
