[package]
name = "spiral-selfsup"
version = "0.1.0"
edition = "2021"
authors = ["SpiralTorch Contributors"]
description = "Self-supervised learning objectives for SpiralTorch"
license = "AGPL-3.0-or-later"

[features]
default = ["cpu"]
cpu = ["st-tensor/cpu"]
wgpu = ["cpu", "st-tensor/wgpu_dense"]

[dependencies]
rand = { version = "0.8", features = ["std", "std_rng"] }
serde = { version = "1", features = ["derive"] }
spiral-config = { path = "../spiral-config" }
st-tensor = { path = "../st-tensor", default-features = false }
st-vision = { path = "../st-vision", default-features = false }
thiserror = "1"
once_cell = "1"
toml = "0.9"

[dev-dependencies]
rand = { version = "0.8", features = ["std", "std_rng"] }
st-core = { path = "../st-core" }
tensorboard-rs = "0.5.9"
