[package]
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]
name = "st-backend-hip"
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "HIP (ROCm) backend for SpiralTorch"

[features]
default = []
hip-real = ["libloading"]

[build-dependencies]
cc = "1"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
base64 = "0.21"
libloading = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3"

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"
