[package]
name = "st-backend-wgpu"
version = "0.1.0"
edition = "2021"
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]
license = "AGPL-3.0-or-later"
description = "WGPU backend kernels and pipeline loaders for SpiralTorch"

[[bin]]
name = "visualize_z_volume"
path = "../../tools/visualize_z_volume.rs"

[dependencies]
wgpu = { version = "0.19", default-features = false, features = ["wgsl"] }
thiserror = "1"
bytemuck = { version = "1", features = ["derive"] }
st-vision = { path = "../st-vision" }
rand = "0.8"
st-tensor = { path = "../st-tensor", features = ["wgpu"] }
pollster = "0.3"

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"
