[package]
name = "st-backend-wgpu"
version = "0.1.0"
edition = "2021"
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]
license = "AGPL-3.0-or-later"
description = "WGPU backend kernels and pipeline loaders for SpiralTorch"

[dependencies]
wgpu = { version = "0.20", default-features = false, features = ["wgsl"] }
thiserror = "1"
bytemuck = { version = "1", features = ["derive"] }
rand = "0.8"
st-tensor = { path = "../st-tensor", features = ["wgpu"] }
pollster = "0.3"

[dev-dependencies]
st-vision = { path = "../st-vision", features = ["wgpu"] }
naga = { version = "0.20", default-features = false, features = ["wgsl-in"] }

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"
