[package]
name = "st-bench"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[features]
python = ["dep:pyo3"]

[dependencies]
st-core = { path = "../st-core" }
st-tensor = { path = "../st-tensor" }
st-nn = { path = "../st-nn" }
st-text = { path = "../st-text" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
st-backend-wgpu = { path = "../st-backend-wgpu" }
pyo3 = { version = "0.24", optional = true, features = ["auto-initialize"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "linear_epoch"
harness = false

[[bench]]
name = "transforms"
harness = false

[[bench]]
name = "python_bindings"
harness = false
required-features = ["python"]
