[package]
authors = ["Ryo ∴ SpiralArchitect <kishkavsesvit@icloud.com>"]
name = "st-core"
version = "1.9.2"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "SpiralTorch core (distributed orchestrators, heuristics, runtime)"

[lib]
name = "st_core"
path = "src/lib.rs"

[features]
hip-real = ["hip", "st-backend-hip/hip-real"]
default = []
hip      = ["dep:st-backend-hip"]
wgpu     = ["dep:wgpu", "dep:bytemuck", "dep:pollster", "dep:once_cell"]
wgpu-rt  = ["wgpu"]
mps      = []
cuda     = ["dep:cudarc"]
logic    = ["dep:st-softlogic"]
"logic-learn" = ["logic", "st-softlogic/learn_store"]
kdsl     = ["dep:st-kdsl", "logic"]
kv-redis = ["st-kv/redis"]
psi      = ["dep:bitflags", "dep:once_cell"]
psychoid = ["dep:once_cell"]
collapse = ["psi"]
apply_zscale = []
golden   = []
experimental_zpulse = []
blackcat_v2 = []
observability-prometheus = ["dep:prometheus"]
observability-otlp = ["dep:opentelemetry"]
julia-ffi = ["dep:julia-ffi-poc"]
go-bridge = ["dep:ureq"]

[dependencies]
thiserror   = "1"
rand        = "0.8"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
dirs        = "5"
statrs      = "0.16"
ndarray     = "0.15"
nalgebra    = "0.32"
rustc-hash  = "1.1"
rustfft     = "6"

once_cell   = { version = "1.19", optional = true }
bytemuck    = { version = "1.16", optional = true, features = ["derive"] }
pollster    = { version = "0.3",  optional = true }
wgpu        = { version = "0.19", optional = true, default-features = false, features = ["wgsl"] }
bitflags    = { version = "2.4", optional = true }

st-backend-hip = { path = "../st-backend-hip", optional = true }
st-softlogic   = { path = "../st-softlogic",   optional = true }
st-kdsl        = { path = "../st-kdsl",        optional = true }
st-kv          = { path = "../st-kv",          optional = true }
st-frac        = { path = "../st-frac" }
cudarc         = { version = "0.11", optional = true, features = ["nvrtc"] }
prometheus     = { version = "0.13", optional = true }
opentelemetry  = { version = "0.21", optional = true, features = ["metrics"] }
julia-ffi-poc  = { path = "../julia-ffi-poc", optional = true }
ureq           = { version = "2.9", optional = true, default-features = true, features = ["json"] }

[dev-dependencies]
approx = "0.5"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[package.metadata.spiraltorch]
copyright = "© 2025 Ryo ∴ SpiralArchitect — All rights reserved"
